add Main and Frontend class

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # Игнор-лист файлов проекта
 # Игнорировать ВСЕ файлы и директории, включая поддиректории и файлы в них
+
+#дирректории
 /.idea/*
+/target/*
+
+#файлы
 /stepicWebServise.iml
