--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>jetty-server</artifactId>
             <version>9.3.1.v20150714</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>9.3.1.v20150714</version>
+        </dependency>
     </dependencies>
     
 </project>
