--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,25 @@
     <version>0.1</version>
 
     <dependencies>
+
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
             <version>9.3.1.v20150714</version>
         </dependency>
+
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
+            <artifactId>jetty-webapp</artifactId>
             <version>9.3.1.v20150714</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.27-incubating</version>
+        </dependency>
+
     </dependencies>
     
 </project>
